--- a/Homework 1/markdown/简答题.md
+++ b/Homework 1/markdown/简答题.md
@@ -61,15 +61,15 @@
    ```
    __Start__:
 
-   ![start](images/start.jpg)
+   ![start](../images/start.jpg)
 
    __Per frame__:
 
-   ![per frame](images/per_frame.jpg)
+   ![per frame](../images/per_frame.jpg)
 
    __End__:
 
-   ![end](images/end.jpg)
+   ![end](../images/end.jpg)
 
    __结论__: 
 
@@ -106,7 +106,7 @@
 
      * UML
 
-       ![UML](images/UML.jpg)
+       ![UML](../images/UML.jpg)
 
 5. 简单代码
 
@@ -133,7 +133,7 @@
              }
      结果如下：
 
-     ![找到对象](images/result1.jpg)
+     ![找到对象](../images/result1.jpg)
 
    * #### 添加子对象
 
@@ -149,7 +149,7 @@
 
    ​       结果如下：
 
-   ​       ![添加成功](images/result2.jpg)
+   ​       ![添加成功](../images/result2.jpg)
 
    * #### 遍历对象树
 
@@ -166,7 +166,7 @@
              }
      结果如下：
 
-     ![结果](images/result3.jpg)
+     ![结果](../images/result3.jpg)
 
    * #### 清除所有子对象
 
@@ -223,4 +223,4 @@
 
 ​              结果：
 
-​              ![结果](images/result5.jpg)
+​              ![结果](../images/result5.jpg)
