--- a/Homework 1/markdown/简答题.md
+++ b/Homework 1/markdown/简答题.md
@@ -21,7 +21,7 @@
    * Plugins _插件_
      * Editor _保存编辑器类文件_
 
-3. _MonoBehaviour_基本行为触发条件：
+3.  _MonoBehaviour_ 基本行为触发条件：
 
    代码如下：
 
@@ -87,24 +87,24 @@
      * _Transform_: 一个对象的位置，旋转和大小。
      * _Component_: 所有附加到游戏对象的属性的基类。
    * __描述属性__
-     * _table_ 的对象是__GameObject__： 
-       * 第一个选择框是__GameObject.activeSelf__属性，表示该对象是否被选中。
-       * 第二个选择框是__GameObject.isStatic__属性，表示对象是否为静态。
-       * _Tag_ 是__GameObject.tag__属性，是游戏对象的标签，多选。
-       * _Layer_ 是__GameObject.layer__属性，游戏对象所在的图层，范围为[0...31]。
-       * _prefabs_ 是__PrefabUtility.GetPrefabObject__属性。
+     * _table_ 的对象是 __GameObject__ ： 
+       * 第一个选择框是 __GameObject.activeSelf__ 属性，表示该对象是否被选中。
+       * 第二个选择框是 __GameObject.isStatic__ 属性，表示对象是否为静态。
+       * _Tag_ 是 __GameObject.tag__ 属性，是游戏对象的标签，多选。
+       * _Layer_ 是 __GameObject.layer__ 属性，游戏对象所在的图层，范围为[0...31]。
+       * _prefabs_ 是 __PrefabUtility.GetPrefabObject__ 属性。
 
-     * _Transform_属性：
-       * 第一行属性框为__Transform.position__属性，可以调整游戏对象的空间位置。
-       * 第二行属性框为__Transform.rotation__属性，调整游戏对象在各个方向上的旋转角度。
-       * 第三行属性框为__Transform.localScale__属性，调整游戏对象的大小。
+     * _Transform_ 属性：
+       * 第一行属性框为 __Transform.position__ 属性，可以调整游戏对象的空间位置。
+       * 第二行属性框为 __Transform.rotation__ 属性，调整游戏对象在各个方向上的旋转角度。
+       * 第三行属性框为 __Transform.localScale__ 属性，调整游戏对象的大小。
 
-     * _table_的部件：
+     * _table_ 的部件：
        * __Mesh Filter__: 网格过滤器，从资源中获取网格，并将其传递到网格渲染器，加以渲染后在屏幕上呈现。
        * __Box Collider__: 箱子碰撞器，指定一个立方体的基本原始碰撞范围。
        * __Mesh Renderer__: 网格渲染器，从网格过滤器中获取几何图形并将其渲染到由该对象的变换组件定义的位置。
 
-     * UML
+     * _UML_
 
        ![UML](../images/UML.jpg)
 
@@ -112,7 +112,7 @@
 
    * #### 查找对象
 
-     新建项目，其中有__Sphere__游戏对象，代码如下：
+     新建项目，其中有 __Sphere__ 游戏对象，代码如下：
 
          void Start()
              {
@@ -188,11 +188,11 @@
 
 6. 预设与对象克隆
 
-   * _Prefabs_: 预制可以存储一个带有组件和属性的__GameObject__作为模板，当想创建新的实例时，可以直接拖动模板进行创建。对预制做的修改可以应用到由该模板生成的所有实例中，也可以单独编辑每一个实例。
+   * _Prefabs_: 预制可以存储一个带有组件和属性的 __GameObject__ 作为模板，当想创建新的实例时，可以直接拖动模板进行创建。对预制做的修改可以应用到由该模板生成的所有实例中，也可以单独编辑每一个实例。
 
-   * 总的来说，预设和对象克隆都能生成新的对象实例，但相比较而言，由_clone_生成的实例，编辑原对象时，就不能应用到所有实例中。
+   * 总的来说，预设和对象克隆都能生成新的对象实例，但相比较而言，由 _clone_ 生成的实例，编辑原对象时，就不能应用到所有实例中。
 
-   * 预制_table_:
+   * 预制 _table_ :
 
          void Update () {
             GameObject obj = (GameObject)Instantiate(Resources.Load("Prefabs/table"));
