--- a/Homework 1/简答题.md
+++ b/Homework 1/简答题.md
@@ -76,8 +76,8 @@
    * _Awake()_: 当脚本实例被载入时调用；
    * _Start()_: 在Update()前被调用一次；
    * _Update()_: 行为启用时，每一帧被调用一次；
-   * _FixedUpdate_: 行为启用时，每一时间片被调用；
-   * _LateUpdate_: 行为启用时，Update()之后被调用；
+   * _FixedUpdate()_: 行为启用时，每一时间片被调用；
+   * _LateUpdate()_: 行为启用时，Update()之后被调用；
    * _OnGUI()_: 每帧调用多次，响应GUI事件；
    * _OnEnable()_: 当对象变为启用并激活时，调用该函数；
    * _OnDisable()_: 当对象变为禁用或不活动时，调用该函数。
