--- a/Homework 1/简答题.md
+++ b/Homework 1/简答题.md
@@ -106,7 +106,7 @@
 
      * _UML_
 
-       ![UML](../images/UML.jpg)
+       ![UML](images/UML.jpg)
 
 5. 简单代码
 
@@ -133,7 +133,7 @@
              }
      结果如下：
 
-     ![找到对象](../images/result1.jpg)
+     ![找到对象](images/result1.jpg)
 
    * #### 添加子对象
 
