--- a/Homework 1/简答题.md
+++ b/Homework 1/简答题.md
@@ -194,8 +194,10 @@
 
    * 预制 _table_ :
 
-         void Update () {
-            GameObject obj = (GameObject)Instantiate(Resources.Load("Prefabs/table"));
+         public GameObject prefab;
+         void Start()
+         {
+            Instantiate(prefab, new Vector3(2.0F, 0, 0), Quaternion.identity);
          }
 
 7. 组合模式
